GNOME Bugzilla – Bug 726447
Possibly an error in text string
Last modified: 2015-03-29 15:44:13 UTC
Hallo glib devs During translation we encountered the following string: #: ../gio/gapplication-tool.c:72 msgid "Optional relative or relative filenames, or URIs to open" which seems a little odd (relative ?? or relative filenames). Is there a mistake there or something? Regards Kenneth